# key-rotation

./: .gitignore  Makefile  README.md  app.py  make_role.py  pyproject.toml  requirements.txt
chalicelib/: config.py  db.py  functions.py  key_rotation.py  loggers.py  ssm.py  terraform.py
chalicelib/util/: __init__.py  deco.py  iterables.py
scripts/: vendor-c-libs.sh
